# ops

./: Makefile.am  requirements.txt
config/: invenio.conf
modules/bibauthorid/css/: bibauthorid.css
modules/bibauthorid/etc/templates/: Makefile.am  citations_summary.html  dashboard.html  disambiguation.html  fake_profile.html  help.html  personal_details_box.html  profile_comparision.html  profile_comparison.html  profile_page.html  publications_list.html
modules/bibauthorid/lib/: Makefile.am  bibauthorid.js  bibauthorid_affiliations.py  bibauthorid_config.py  bibauthorid_daemon.py  bibauthorid_dbinterface.py  bibauthorid_disambiguation.py  bibauthorid_general_utils.py  bibauthorid_merge.py  bibauthorid_name_utils.py  bibauthorid_name_utils_unit_tests.py  bibauthorid_rabbit_regression_tests.py  bibauthorid_templates.py  bibauthorid_tortoise.py  bibauthorid_webapi.py  bibauthorid_webinterface.py  bucketing_test.py
modules/bibauthorid/web/: Makefile.am
modules/bibedit/lib/: bibedit_engine.py
modules/bibupload/lib/: bibupload.py
modules/miscutil/lib/: inveniocfg.py
modules/miscutil/lib/upgrades/: invenio_2014_01_23_bibauthorid_rabbit_matchable_name_column.py  invenio_2014_07_31_new_aidDISAMBIGUATIONLOG.py  invenio_2014_10_28_remove_author_duplicates.py
modules/miscutil/sql/: tabcreate.sql
modules/webauthorprofile/lib/: webauthorprofile_corefunctions.py  webauthorprofile_templates.py  webauthorprofile_webinterface.py
modules/websearch/lib/: search_engine.py  websearch_regression_tests.py  websearch_templates.py
